--- a/app/src/main/res/drawable/button_background_normal_blue.xml
+++ b/app/src/main/res/drawable/button_background_normal_blue.xml
@@ -10,9 +10,9 @@
     </item>-->
     <item android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#7c4dff" />
+            <solid android:color="@color/color_primary_button" />
             <corners android:radius="0dp" />
-            <stroke android:width="1dp" android:color="#7c4dff" />
+            <stroke android:width="1dp" android:color="@color/color_primary_button" />
         </shape>
     </item>
 </layer-list>
