--- a/app/src/main/res/drawable/button_background_press_blue.xml
+++ b/app/src/main/res/drawable/button_background_press_blue.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- selector xmlns:android="http://schemas.android.com/apk/res/android" -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+
+    <item android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#1790d6" />
+            <solid android:color="@color/colorPrimaryDark" />
             <corners android:radius="3dp" />
-            <stroke android:width="1dp" android:color="#3a9cd4"/>
-        </shape>
-    </item>
-    <item android:bottom="7dp">
-        <shape android:shape="rectangle">
-            <solid android:color="#02669f" />
-            <corners android:radius="3dp" />
-            <stroke android:width="1dp" android:color="#007bc1" />
+            />
         </shape>
     </item>
 </layer-list>
