--- a/app/src/main/res/layout/order_parent_layout.xml
+++ b/app/src/main/res/layout/order_parent_layout.xml
@@ -29,7 +29,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="SignOut"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            style="@style/ButtonStylePositiveBlue2"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp">
         </Button>
     </RelativeLayout>
     </android.support.design.widget.NavigationView>
