--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -157,6 +157,13 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">bottom</item>
     </style>
+    <style name="ButtonStyleNavigation">
+        <item name="android:layout_height">45dp</item>
+        <item name="android:background">@drawable/button_background_blue</item>
+        <item name="android:textAppearance">@style/TextAppearanceButton</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+    </style>
     <style name="ButtonStylePositiveFull">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
