Signed-off-by: enggaloksingh <aloksingh.itbhu@gmail.com>

--- a/app/src/main/res/layout/activity_activity__payment.xml
+++ b/app/src/main/res/layout/activity_activity__payment.xml
@@ -1,18 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
+
+    <LinearLayout
+        android:id="@+id/next_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/place_order"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_gravity="bottom"
+            android:text="Place Order"
+            android:shadowColor="#00ccff"
+            android:shadowRadius="0.75"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_alignParentBottom="true"
+            style="@style/ButtonStylePositiveBlue2"
+            />
+    </LinearLayout>
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cherry.alok.myapplication.Activity_Payment">
+    android:paddingBottom="@dimen/activity_vertical_margin_small"
+    android:paddingLeft="@dimen/activity_vertical_margin_small"
+    android:paddingRight="@dimen/activity_vertical_margin_small"
+    android:paddingTop="@dimen/activity_vertical_margin_small"
+    tools:context="com.cherry.alok.myapplication.Activity_Payment"
+    android:layout_above="@id/next_btn">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
 
 
@@ -22,8 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+
         >
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,8 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -203,102 +230,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <LinearLayout
-                android:id="@+id/payment_options_credit"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
+        android:layout_marginBottom="8dp">
 
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.8">
-                <ImageView
-                    android:id="@+id/img_cerdit_select"
-                    android:layout_weight="0.2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/check_light"
-                    />
-                <TextView
-                    android:id="@+id/txt_credit"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="0.8"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_height="30dp"
-                    android:textSize="18sp"
-                    android:text="Credit Card"/>
-
-            </LinearLayout>
-            <View
-                style="@style/LineViewStyle" />
-            <LinearLayout
-                android:id="@+id/payment_options_layout_netbanking"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.8">
-                <ImageView
-                    android:id="@+id/img_netbanking_select"
-                    android:layout_weight="0.2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/check_light"
-                    />
-                <TextView
-                    android:id="@+id/txt_netbanking"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="0.8"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_height="30dp"
-                    android:textSize="18sp"
-                    android:text="Net Banking"/>
-
-            </LinearLayout>
-            <View
-
-                style="@style/LineViewStyle" />
-            <LinearLayout
-                android:id="@+id/payment_options_layout_paytm"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.8">
-                <ImageView
-                    android:id="@+id/img_paytm_select"
-                    android:layout_weight="0.2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/check_light"
-                    />
-                <TextView
-                    android:id="@+id/txt_paytm"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="0.8"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_height="30dp"
-                    android:textSize="18sp"
-                    android:text="Paytm"/>
-
-            </LinearLayout>
-            <View
-
-                style="@style/LineViewStyle" />
             <LinearLayout
                 android:id="@+id/payment_options_layout_cash"
                 android:layout_width="match_parent"
@@ -326,24 +259,9 @@
                     android:text="Cash After Service"/>
 
             </LinearLayout>
-            <View
 
-                style="@style/LineViewStyle" />
 
-            <Button
-                android:id="@+id/place_order"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Place Order"
-                android:shadowColor="#00ccff"
-                android:shadowRadius="0.75"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                style="@style/ButtonStylePositiveBlue2"
-                />
-        </LinearLayout>
+
 
 
     </android.support.v7.widget.CardView>
@@ -352,4 +270,6 @@
 
     </LinearLayout>
 
+
 </ScrollView>
+</RelativeLayout>
