--- a/app/src/main/res/layout/activity_select_slot.xml
+++ b/app/src/main/res/layout/activity_select_slot.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,10 +12,28 @@
     tools:context="com.cherry.alok.myapplication.SelectSlotActivity"
 
     android:id="@+id/selectslot_cordlayout">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/rel_checkout"
+    android:layout_alignParentBottom="true">
+    <Button
+        android:id="@+id/confirm_request"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="5dp"
+        android:shadowColor="#00ccff"
+        android:shadowRadius="1.5"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:layout_alignParentBottom="true"
+        style="@style/ButtonStylePositiveBlue2"
+        />
+</LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.cherry.alok.myapplication.OrderActivity"
         tools:showIn="@layout/order_parent"
@@ -85,7 +103,7 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_weight="0.5">
+                >
                 <ImageView
                     android:id="@+id/carlogo"
                     android:layout_width="0dp"
@@ -115,32 +133,32 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_marginTop="5dp">
 
-                <Button
-                    android:id="@+id/confirm_request"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-
-                    android:layout_marginLeft="5dp"
-
-                    android:text="Next"
-                    android:shadowColor="#00ccff"
-                    android:shadowRadius="1.5"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
-                    style="@style/ButtonStylePositiveBlue2"
-                    />
-            </LinearLayout>
 
 
 
         </LinearLayout>
+       <!-- <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:layout_marginTop="5dp">
 
+            <Button
+                android:id="@+id/confirm_request"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+
+                android:layout_marginLeft="5dp"
+
+                android:text="Next"
+                android:shadowColor="#00ccff"
+                android:shadowRadius="1.5"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                style="@style/ButtonStylePositiveBlue2"
+                />
+        </LinearLayout>-->
         <!--LinearLayout
             android:id="@+id/addtion_inst"
             android:layout_width="match_parent"
@@ -224,4 +242,4 @@
         android:id="@+id/selectslot_bottom_sheet"
         android:elevation="8dp"/-->
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
