--- a/app/src/main/res/layout/recyclerlist_item.xml
+++ b/app/src/main/res/layout/recyclerlist_item.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardlist_item"
     android:layout_width="match_parent"
     android:layout_height="400dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:layout_marginTop="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    card_view:cardBackgroundColor="@android:color/white"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="@dimen/cardview_default_elevation">
+>
+<!--    <android.support.v7.widget.CardView
+        android:id="@+id/card_brand"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
 
+
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_model"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+
+    </android.support.v7.widget.CardView>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,14 +39,20 @@
         android:orientation="vertical"
         android:weightSum="1">
 
+
         <android.support.v7.widget.CardView
-            android:id="@+id/card_brand"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
+            android:id="@+id/card_image"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
             <TextView
                 android:id="@+id/carbrand_label_clps"
                 android:layout_width="fill_parent"
@@ -37,16 +61,6 @@
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:theme="@style/Base.CardView"/>
-
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_model"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
             <TextView
                 android:id="@+id/carmodel_label_clps"
                 android:layout_width="fill_parent"
@@ -55,16 +69,6 @@
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:theme="@style/Base.CardView"/>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:id="@+id/card_image"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            >
             <TextView
                 android:id="@+id/carreg_label_clps"
                 android:layout_width="match_parent"
@@ -72,8 +76,7 @@
                 android:text="Select Car"
                 android:textAlignment="center"
                 android:textSize="20sp"
-                android:theme="@style/Base.CardView"
-                android:layout_weight="0.96" />
+                android:theme="@style/Base.CardView" />
 
             <ImageView
                 android:id="@+id/car_imageView_clps"
@@ -84,11 +87,12 @@
                 android:layout_gravity="bottom"
                 android:baselineAlignBottom="false"
                 android:contentDescription="Image Of Car"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"/>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
