--- a/app/src/main/res/layout/recycler_service_type.xml
+++ b/app/src/main/res/layout/recycler_service_type.xml
@@ -14,6 +14,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/service_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -60,8 +61,8 @@
 
         <ImageView
             android:id="@+id/services_select_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="0.2"
             android:src="@drawable/check_light"/>
