--- a/app/src/main/res/layout/activity_services_toolbar.xml
+++ b/app/src/main/res/layout/activity_services_toolbar.xml
@@ -45,6 +45,7 @@
         android:id="@+id/services_scrollableview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
