--- a/app/src/main/res/layout/services_bottomsheet.xml
+++ b/app/src/main/res/layout/services_bottomsheet.xml
@@ -12,15 +12,15 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/deep_orange">
+        android:background="@color/color_primary_button">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:background="@android:color/holo_blue_bright">
+            android:layout_height="320dp"
+            android:background="@color/color_primary_button">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="@color/amber"
+                android:layout_height="100dp"
+                android:background="@color/color_primary_disabled"
                 android:elevation="4dp"
                 android:orientation="vertical"
                 android:paddingTop="@dimen/activity_horizontal_margin">
@@ -28,34 +28,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="0.4">
+                    android:layout_weight="0.6">
                     <ImageView
-                        android:id="@+id/down_bottomsheet"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/close"
-                        android:layout_marginLeft="4dp"
-                        android:layout_weight="0.2"/>
+                        android:id="@+id/wash_logo"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/lightening"
+                        android:layout_weight="0.25"/>
+
                     <TextView
                         android:id="@+id/service_name_bottomsheet"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="BASIC WASH"
-                        android:layout_weight="0.8"
+                        android:layout_weight="0.5"
                         android:gravity="center"
-                        android:textSize="40sp"/>
+                        android:textSize="30sp"/>
+                    <ImageView
+                        android:id="@+id/down_bottomsheet"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/close"
+                        android:layout_marginRight="4dp"
+                        android:layout_weight="0.25"/>
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.6">
-                    <ImageView
-                        android:id="@+id/wash_logo"
+                    android:layout_weight="0.4">
+                    <TextView
+                        android:id="@+id/service_cost_bottomsheet"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/lightening"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_height="wrap_content"
+                        android:text="Rs 700"
+                        android:gravity="center"
+                        android:textSize="20sp"/>
                 </LinearLayout>
 
 
@@ -68,7 +77,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="100dp"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
